--- a/Dados Lineares/index.html
+++ b/Dados Lineares/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testes</title>
     <script src="./vetores.js"></script>
+    <script src="./recursividade.js"></script>
 </head>
 <body>
     
